public enum Status {
    PLACED,
    OUT_FOR_DELIVERY,
    RETURNED,
    DELIVERED
}
